# myagents

./: .env  .env.example  .gitignore  ARCHITECTURE.md  MCP_AND_SKILL.md  MECHANISM.md  main.py  plan.md  pyproject.toml  useModel.py
.claude/: settings.local.json
agent/: planSolveAgent.py  reactAgent.py  reflectionAgent.py
agents/: __init__.py  planSolveAgent.py  reactAgent.py  reflectionAgent.py
core/: agent.py  db.py  llm.py  memory.py  message.py  models.py
llm/: llm_client.py
memories/: __init__.py
memory/: reflectionMemory.py
rag/: .indexed_files.json  CHANGE_SUMMARY.md  RAG_LINE_BY_LINE.md  README.md  rag.py  rag_annotated.py  rag_py_diff_explained.md  ragtest.py  ragtest_cases.example.json  ragtest_cases.json  ragtest_compare.md  ragtest_report.hybrid_baseline.json  ragtest_report.json
rag/_paper_extracts/: 2603.15566v1.txt  2603.15594v1.txt  2603.15602v1.txt
tools/: __init__.py  base.py  registry.py  search.py  tool_executor.py
tools/builttin/: __init__.py  calculator_tool.py  search.py
